@@ -5,9 +5,8 @@
 		<link type="text/css" rel="stylesheet" href="/css/large/popup.css" id="popup_style_css"/>
 		<script src="/scripts/popup.js"></script>
 		<script src="/scripts/localstorage.js"></script>
-		<script>loadStyle();</script>
 	</head>
-	<body onload="refreshPopup();" id="popup_display">
+	<body onload="loadStyle(); refreshPopup();" id="popup_display">
 		<div id="controls">
 			<div id="controls-left">
 				&nbsp;<a href="options.html" id="control-settings" target="_blank"></a>
